--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,47 @@
+.pole, .light {
+    background-color: black;
+    margin: 0;
+    height: 200px;
+}
 
-/* 
+.light {
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.pole {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+}
 
-*/
+.red {
+    background-color: red;
+}
+
+.orange {
+    background-color: orange;
+}
+
+.green {
+    background-color: green;
+}
+
+.purple {
+    background-color: purple;
+}
+
+.circle {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.active {
+    filter: brightness(1.5);
+    box-shadow: 0 0 50px 20px rgba(255, 255, 255, 0.8);
+}
